# mpres-blas

./: .gitignore  AUTHORS  CMakeLists.txt  README.md  run_test.sh
tests/: CMakeLists.txt  logger.cuh  timers.cuh  tsthelper.cuh
tests/arith/: extrange_correctness_test.cu  mp_add_correctness_test.cu  rns_eval_accuracy_test.cu  test_extrange_verify.cu  test_mp_add_verify.cu  test_mp_cmp_verify.cu  test_mp_div_verify.cu  test_mp_inv_sqrt_verify.cu  test_mp_mul_verify.cu  test_mp_sqrt_verify.cu  test_mp_sub_verify.cu  test_rns_cmp_performance.cu  test_rns_eval_verify.cu
tests/arith/peak/: test_mp_arith_peak.cuh  test_mp_arith_peak_performance.cu
tests/blas/accuracy/: mp_asum_accuracy_test.cu  mp_axpy_accuracy_test.cu  mp_dot_accuracy_test.cu  mp_scal_accuracy_test.cu  test_asum_accuracy.cu  test_axpy_accuracy.cu  test_dot_accuracy.cu  test_mpasum_accuracy.cu  test_mpaxpy_accuracy.cu  test_mpdot_accuracy.cu  test_mpscal_accuracy.cu  test_scal_accuracy.cu
tests/blas/lib/: campary_blas.cuh  cump_blas.cuh  garprec_blas.cuh
tests/blas/performance/: 3rdparty.cuh  mp_asum_performance_test.cu  mp_axpy_dot_performance_test.cu  mp_axpy_performance_test.cu  mp_dot_performance_test.cu  mp_gemv_performance_test.cu  mp_rot_performance_test.cu  mp_scal_performance_test.cu  test_asum_performance.cu  test_axpy_performance.cu  test_axpydot_performance.cu  test_dot_performance.cu  test_geacc_performance.cu  test_geadd_performance.cu  test_gediagscale_performance.cu  test_gelrscale_performance.cu  test_gemm_performance.cu  test_gemv_performance.cu  test_genorm_performance.cu  test_ger_performance.cu  test_mpasum_performance.cu  test_mpaxpy_performance.cu  test_mpaxpydot_performance.cu  test_mpdot_performance.cu  test_mpgeacc_performance.cu  test_mpgeadd_performance.cu  test_mpgediagscale_performance.cu  test_mpgelrscale_performance.cu  test_mpgemm_performance.cu  test_mpgemv_performance.cu  test_mpgenorm_performance.cu  test_mpger_performance.cu  test_mpnorm_performance.cu  test_mprot_performance.cu  test_mpscal_performance.cu  test_mpsymv_performance.cu  test_norm_performance.cu  test_rot_performance.cu  test_scal_performance.cu  test_spmv_performance.cu  (+1 more)
tests/blas/performance/symv/: test_campary_symv.cuh  test_cublas_symv.cuh  test_double_symv.cuh  test_mpfr_symv.cuh  test_mpres_symv.cuh  test_openblas_symv.cuh  test_symv_performance.cu
tests/blas/v2/axpy/: test_axpy_v2_performance.cu  test_mpfr_axpy.cuh  test_mpres_axpy.cuh  test_openblas_axpy.cuh
tests/blas/v2/dot/: test_dot_v2_performance.cu  test_mpfr_dot.cuh  test_mpres_dot.cuh  test_openblas_dot.cuh
tests/blas/v2/gemm/: test_campary_gemm.cuh  test_cublas_gemm.cuh  test_double_gemm.cuh  test_gemm_v2_performance.cu  test_mpfr_gemm.cuh  test_mpres_gemm.cuh  test_openblas_gemm.cuh
tests/blas/v2/ger/: test_campary_ger.cuh  test_cublas_ger.cuh  test_double_ger.cuh  test_ger_v2_performance.cu  test_mpfr_ger.cuh  test_mpres_ger.cuh  test_openblas_ger.cuh
tests/blas/v2/scal/: test_mpfr_scal.cuh  test_mpres_scal.cuh  test_openblas_scal.cuh  test_scal_v2_performance.cu
tests/blas/v2/symv/: test_cublas_symv.cuh  (+6 more)
tests/lib/: campary_common.cuh  cump_common.cuh
tests/lib/garprec/: NOTICE
tests/lib/xblas/: NOTICE
tests/sparse/: test_cg_csr.cu  test_cgcsrls.cu  test_mpspmv.cu  test_mpspmv_csr_performance.cu  test_mpspmv_dia_performance.cu  test_mpspmv_ell_performance.cu  test_mpspmv_jad_performance.cu  test_solver_csr.cu  test_spmv.cu  test_spmv_csr_accuracy.cu  test_spmv_csr_performance.cu  test_spmv_dia_performance.cu  test_spmv_ell_performance.cu  test_spmv_gemv.cu  test_spmv_jad_performance.cu
tests/sparse/accuracy/: test_double_spmv_csr_accuracy.cuh  test_mpres_spmv_csr_accuracy.cuh
tests/sparse/cgcsrls/: double_ls_kernels.cuh  test_double_cgcsrls.cuh  test_double_pcgcsrls_jacobi.cuh  test_mpres_cgcsrls.cuh  test_mpres_pcgcsrls_jacobi.cuh
tests/sparse/csr/: test_campary_mpspmv_csr.cuh  test_campary_mpspmv_csr_scalar.cuh  test_campary_mpspmv_csr_vector.cuh  test_campary_spmv_csr.cuh  test_campary_spmv_csrv.cuh  test_cump_mpspmv_csr.cuh  test_cump_spmv_csr.cuh  test_double_spmv_csr.cuh  test_mpfr_mpspmv_csr.cuh  test_mpfr_spmv_csr.cuh  test_mpres_mpspmv_csr.cuh  test_mpres_mpspmv_csr_scalar.cuh  test_mpres_mpspmv_csr_vector.cuh  test_mpres_spmv_csr.cuh  test_mpres_spmv_csrv.cuh  test_taco_spmv_csr.cuh
tests/sparse/dia/: test_campary_mpspmv_dia.cuh  test_campary_spmv_dia.cuh  test_cump_mpspmv_dia.cuh  test_cump_spmv_dia.cuh  test_double_spmv_dia.cuh  test_mpres_mpspmv_dia.cuh  test_mpres_spmv_dia.cuh
tests/sparse/ell/: test_campary_mpspmv_ell.cuh  test_campary_spmv_ell.cuh  test_cump_mpspmv_ell.cuh  test_cump_spmv_ell.cuh  test_double_spmv_ell.cuh  test_mpres_mpspmv_ell.cuh  test_mpres_spmv_ell.cuh
tests/sparse/jad/: test_campary_mpspmv_jad.cuh  test_campary_spmv_jad.cuh  test_cump_mpspmv_jad.cuh  test_cump_spmv_jad.cuh  test_double_spmv_jad.cuh  test_mpres_mpspmv_jad.cuh  test_mpres_mpspmv_jad_vector.cuh  test_mpres_spmv_jad.cuh  test_mpres_spmv_jadv.cuh
tests/sparse/lib/: campary_sparse.cuh  cump_sparse.cuh
tests/sparse/matrices/: 5x5 16-not-null.mtx  DK01R.mtx  Trefethen_500.mtx  nos7.mtx  young3c.mtx
tests/sparse/mpmtx/: ReadMe.txt  test_mpspmv_mpmtx_csr_performance.cu  test_mpspmv_mpmtx_dia_performance.cu  test_mpspmv_mpmtx_ell_performance.cu  test_mpspmv_mpmtx_jad_performance.cu  test_spmv_mpmtx_csr_performance.cu  test_spmv_mpmtx_dia_performance.cu  test_spmv_mpmtx_ell_performance.cu  test_spmv_mpmtx_jad_performance.cu
tests/sparse/performance/: 3rdparty.cuh  test_mpdspmv_csr_performance.cu  test_mpdspmv_dia_performance.cu  test_mpdspmv_ell_performance.cu  test_mpdspmv_jad_performance.cu  test_mpdspmv_performance.cu  test_mpspmv_csr_performance.cu  test_mpspmv_dia_performance.cu  test_mpspmv_ell_performance.cu  test_mpspmv_jad_performance.cu  test_mpspmvcsr_performance.cu  test_mpspmvdia_performance.cu  test_mpspmvell_performance.cu
tests/sparse/solver/: test_double_cg_csr.cuh  test_double_pcg_csr.cuh  test_double_pcg_diag_csr.cuh  test_mpres_cg_csr.cuh  test_mpres_pcg_csr.cuh  test_mpres_pcg_diag_csr.cuh
(+381 files in other folders)
